aws(old infra)/vpc.yml
AWSTemplateFormatVersion: "2010-09-09"

Description: |
        The VPC of Doclane. Consists of two private subnets for the Lambda backend,
        a route table, the route associations for the table, an
        Interface endpoint for CloudWatch (Lambda needs it) and a gateway VPC endpoint
        for S3. Robert is a Solutions Architect Professional AWS Certified so he does it
        like that, what a chad.

Parameters:
        AZ1:
                Type: AWS::EC2::AvailabilityZone::Name
                Description: Select first AZ

        AZ2:
                Type: AWS::EC2::AvailabilityZone::Name
                Description: Select second AZ

        MyPublicCidr:
                Type: String
                Description: Public IP address for Bastion SSH access
                AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/32
                ConstraintDescription: Must be a valid IP in x.x.x.x/32 format

Resources:
        VPC:
                Type: AWS::EC2::VPC
                Properties:
                        CidrBlock: 10.0.0.0/16
                        EnableDnsHostnames: true
                        EnableDnsSupport: true
                        Tags:
                                - Key: Name
                                  Value: doclane-vpc
                                - Key: Description
                                  Value: The VPC where Doclane is deployed.

        PrivateSubnet1:
                Type: AWS::EC2::Subnet
                Properties:
                        VpcId: !Ref VPC
                        AvailabilityZone: !Ref AZ1
                        CidrBlock: "10.0.0.0/24"
                        Tags:
                                - Key: Name
                                  Value: doclane-private-subnet-1
                                - Key: Description
                                  Value: One of the two subnets where Lambda backend is deployed, to ensure high availability.

        PrivateSubnet2:
                Type: AWS::EC2::Subnet
                Properties:
                        VpcId: !Ref VPC
                        AvailabilityZone: !Ref AZ2
                        CidrBlock: "10.0.1.0/24"
                        Tags:
                                - Key: Name
                                  Value: doclane-private-subnet-2
                                - Key: Description
                                  Value: One of the two subnets where Lambda backend is deployed, to ensure high availability.

        IGW:
                Type: AWS::EC2::InternetGateway
                Properties:
                        Tags:
                                - Key: Name
                                  Value: doclane-igw
                                - Key: Description
                                  Value: The internet gateway is needed for making a public subnet.

        AttachIGW:
                Type: AWS::EC2::VPCGatewayAttachment
                Properties:
                        InternetGatewayId: !Ref IGW
                        VpcId: !Ref VPC

        InternetRoute:
                Type: AWS::EC2::Route
                Properties:
                        GatewayId: !Ref IGW
                        RouteTableId: !Ref PublicRouteTable
                        DestinationCidrBlock: 0.0.0.0/0

        PublicSubnet1:
                Type: AWS::EC2::Subnet
                Properties:
                        VpcId: !Ref VPC
                        AvailabilityZone: !Ref AZ1
                        CidrBlock: "10.0.2.0/24"
                        MapPublicIpOnLaunch: true
                        Tags:
                                - Key: Name
                                  Value: doclane-public-subnet-1
                                - Key: Description
                                  Value: Needed for the ALB and Bastion Host so that we may initialize the RDS instance.

        PublicSubnet2:
                Type: AWS::EC2::Subnet
                Properties:
                        VpcId: !Ref VPC
                        AvailabilityZone: !Ref AZ2
                        CidrBlock: "10.0.3.0/24"
                        MapPublicIpOnLaunch: true
                        Tags:
                                - Key: Name
                                  Value: doclane-public-subnet-2
                                - Key: Description
                                  Value: Needed for the ALB.

        PrivateRouteTable:
                Type: AWS::EC2::RouteTable
                Properties:
                        VpcId: !Ref VPC
                        Tags:
                                - Key: Name
                                  Value: doclane-private-route-table
                                - Key: Description
                                  Value: The route table used by the lambda backend

        PublicRouteTable:
                Type: AWS::EC2::RouteTable
                Properties:
                        VpcId: !Ref VPC
                        Tags:
                                - Key: Name
                                  Value: doclane-public-route-table
                                - Key: Description
                                  Value: The route table used by the public subnet.

        PrivateSubnet1Association:
                Type: AWS::EC2::SubnetRouteTableAssociation
                Properties:
                        RouteTableId: !Ref PrivateRouteTable
                        SubnetId: !Ref PrivateSubnet1

        PrivateSubnet2Association:
                Type: AWS::EC2::SubnetRouteTableAssociation
                Properties:
                        RouteTableId: !Ref PrivateRouteTable
                        SubnetId: !Ref PrivateSubnet2

        PublicSubnet1Association:
                Type: AWS::EC2::SubnetRouteTableAssociation
                Properties:
                        RouteTableId: !Ref PublicRouteTable
                        SubnetId: !Ref PublicSubnet1

        PublicSubnet2Association:
                Type: AWS::EC2::SubnetRouteTableAssociation
                Properties:
                        RouteTableId: !Ref PublicRouteTable
                        SubnetId: !Ref PublicSubnet2

        GatewayEndpointS3:
                Type: AWS::EC2::VPCEndpoint
                Properties:
                        ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
                        RouteTableIds:
                                - !Ref PrivateRouteTable
                        VpcEndpointType: Gateway
                        VpcId: !Ref VPC
                        Tags:
                                - Key: Name
                                  Value: doclane-gateway-endpoint-s3
                                - Key: Description
                                  Value: Gateway endpoint is needed for Lambda to access S3. Lambda backend has no internet access.

        InterfaceEndpointCloudWatch:
                Type: AWS::EC2::VPCEndpoint
                Properties:
                        ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
                        VpcEndpointType: Interface
                        SubnetIds:
                                - !Ref PrivateSubnet1
                                - !Ref PrivateSubnet2
                        SecurityGroupIds:
                                - !Ref EndpointSG
                        PrivateDnsEnabled: true
                        VpcId: !Ref VPC
                        Tags:
                                - Key: Name
                                  Value: doclane-interface-endpoint-cloudwatch
                                - Key: Description
                                  Value: Interface endpoint is needed for Lambda to post logs in CloudWatch. Lambda backend has no internet access.

        InterfaceEndpointSSM:
                Type: AWS::EC2::VPCEndpoint
                Properties:
                        ServiceName: !Sub com.amazonaws.${AWS::Region}.ssm
                        VpcEndpointType: Interface
                        SubnetIds:
                                - !Ref PrivateSubnet1
                                - !Ref PrivateSubnet2
                        SecurityGroupIds:
                                - !Ref EndpointSG
                        PrivateDnsEnabled: true
                        VpcId: !Ref VPC
                        Tags:
                                - Key: Name
                                  Value: doclane-interface-endpoint-ssm
                                - Key: Description
                                  Value: Interface endpoint is needed for Lambda to access RDS credentials stored in SSM. Lambda backend has no internet access.

        InterfaceEndpointKMS:
                Type: AWS::EC2::VPCEndpoint
                Properties:
                        ServiceName: !Sub com.amazonaws.${AWS::Region}.kms
                        VpcEndpointType: Interface
                        SubnetIds:
                                - !Ref PrivateSubnet1
                                - !Ref PrivateSubnet2
                        PrivateDnsEnabled: true
                        VpcId: !Ref VPC
                        SecurityGroupIds:
                                - !Ref EndpointSG
                        Tags:
                                - Key: Name
                                  Value: doclane-interface-endpoint-kms
                                - Key: Description
                                  Value: Needed for Lambda to be able to decrypt SSM Secure Strings since Lambda has no internet access.

        InterfaceEndpointAPIGateway:
                Type: AWS::EC2::VPCEndpoint
                Properties:
                        ServiceName: !Sub com.amazonaws.${AWS::Region}.execute-api
                        VpcEndpointType: Interface
                        SubnetIds:
                                - !Ref PrivateSubnet1
                                - !Ref PrivateSubnet2
                        PrivateDnsEnabled: true
                        VpcId: !Ref VPC
                        SecurityGroupIds:
                                - !Ref EndpointSG
                        Tags:
                                - Key: Name
                                  Value: doclane-interface-endpoint-apigateway
                                - Key: Description
                                  Value: Needed for front-end web servers to invoke the private API Gateway.

        EndpointSG:
                Type: AWS::EC2::SecurityGroup
                Properties:
                        GroupDescription: Allow Lambda to access VPC endpoints
                        VpcId: !Ref VPC
                        Tags:
                                - Key: Name
                                  Value: doclane-endpoint-sg
                                - Key: Description
                                  Value: Used for the interface endpoints in the deployment such that only Lambda SG can access it.

        EndpointSGIngressFromLambda:
                Type: AWS::EC2::SecurityGroupIngress
                Properties:
                        GroupId: !Ref EndpointSG
                        IpProtocol: tcp
                        FromPort: 443
                        ToPort: 443
                        SourceSecurityGroupId: !Ref LambdaBackendSG

        EndpointSGIngressFromWebServer:
                Type: AWS::EC2::SecurityGroupIngress
                Properties:
                        GroupId: !Ref EndpointSG
                        IpProtocol: tcp
                        FromPort: 443
                        ToPort: 443
                        SourceSecurityGroupId: !Ref WebServerSG

        BastionSG:
                Type: AWS::EC2::SecurityGroup
                Properties:
                        GroupDescription: Enable Bastion Host to allow inbound SSH from outside.
                        VpcId: !Ref VPC
                        SecurityGroupIngress:
                                - IpProtocol: tcp
                                  FromPort: 22
                                  ToPort: 22
                                  CidrIp: !Ref MyPublicCidr
                        SecurityGroupEgress:
                                - IpProtocol: -1
                                  CidrIp: 0.0.0.0/0

        LambdaBackendSG:
                Type: AWS::EC2::SecurityGroup
                Properties:
                        GroupDescription: Used to be referenced by the RDS Security group to guarantee least privilege access to RDS. That is the only purpose it serves.
                        GroupName: doclane-lambda-sg
                        VpcId: !Ref VPC
                        Tags:
                                - Key: Name
                                  Value: doclane-lambda-sg
                                - Key: Description
                                  Value: Used to be referenced by the RDS Security group to guarantee least privilege access to RDS. That is the only purpose it serves.

        LambdaEgressToRDS:
                Type: AWS::EC2::SecurityGroupEgress
                Properties:
                        GroupId: !Ref LambdaBackendSG
                        IpProtocol: tcp
                        FromPort: 5432
                        ToPort: 5432
                        DestinationSecurityGroupId: !Ref RDSDatabaseSG

        LambdaEgressToEndpoint:
                Type: AWS::EC2::SecurityGroupEgress
                Properties:
                        GroupId: !Ref LambdaBackendSG
                        IpProtocol: tcp
                        FromPort: 443
                        ToPort: 443
                        DestinationSecurityGroupId: !Ref EndpointSG

        RDSDatabaseSG:
                Type: AWS::EC2::SecurityGroup
                Properties:
                        GroupDescription: Security Group used for the RDS instance, leverages least privilege principle to only allow Doclane Lambda backend to connect.
                        GroupName: doclane-rds-sg
                        VpcId: !Ref VPC
                        Tags:
                                - Key: Name
                                  Value: doclane-rds-sg
                                - Key: Description
                                  Value: Security Group used for the RDS instance, leverages least privilege principle to only allow Doclane Lambda backend to connect.

        RDSIngressFromBastion:
                Type: AWS::EC2::SecurityGroupIngress
                Properties:
                        GroupId: !Ref RDSDatabaseSG
                        IpProtocol: tcp
                        FromPort: 5432
                        ToPort: 5432
                        SourceSecurityGroupId: !Ref BastionSG

        RDSIngressFromLambda:
                Type: AWS::EC2::SecurityGroupIngress
                Properties:
                        GroupId: !Ref RDSDatabaseSG
                        IpProtocol: tcp
                        FromPort: 5432
                        ToPort: 5432
                        SourceSecurityGroupId: !Ref LambdaBackendSG

        WebServerSG:
                Type: AWS::EC2::SecurityGroup
                Properties:
                        GroupDescription: Security Group used for the web servers. Allows http traffic to the web servers of Doclane. Used for the front-end web servers.
                        GroupName: doclane-web-sg
                        VpcId: !Ref VPC
                        Tags:
                                - Key: Name
                                  Value: doclane-web-sg
                                - Key: Description
                                  Value: Security Group used for the web servers. Allows http traffic to the web servers of Doclane. Used for the front-end web servers.
                        SecurityGroupIngress:
                                - IpProtocol: tcp
                                  FromPort: 22
                                  ToPort: 22
                                  SourceSecurityGroupId: !Ref BastionSG
                                - IpProtocol: tcp
                                  FromPort: 80
                                  ToPort: 80
                                  SourceSecurityGroupId: !Ref ELBSecurityGroup

        ELBSecurityGroup:
                Type: AWS::EC2::SecurityGroup
                Properties:
                        GroupDescription: Security group for the ALB, allows inbound https traffic
                        VpcId: !Ref VPC
                        SecurityGroupIngress:
                                - IpProtocol: tcp
                                  FromPort: 443
                                  ToPort: 443
                                  CidrIp: 0.0.0.0/0

Outputs:
        VpcId:
                Value: !Ref VPC
                Export:
                        Name: doclane-vpc-id
        PrivateSubnet1Id:
                Value: !Ref PrivateSubnet1
                Export:
                        Name: doclane-private-subnet-1-id

        PrivateSubnet2Id:
                Value: !Ref PrivateSubnet2
                Export:
                        Name: doclane-private-subnet-2-id

        RDSDatabaseSGId:
                Value: !Ref RDSDatabaseSG
                Export:
                        Name: doclane-rds-sg-id

        LambdaSGId:
                Value: !Ref LambdaBackendSG
                Export:
                        Name: doclane-lambda-sg-id

        AvailabilityZone1:
                Value: !Ref AZ1
                Export:
                        Name: doclane-az1

        AvailabilityZone2:
                Value: !Ref AZ2
                Export:
                        Name: doclane-az2

        PublicSubnet1Id:
                Value: !Ref PublicSubnet1
                Export:
                        Name: doclane-public-subnet-1-id
        PublicSubnet2Id:
                Value: !Ref PublicSubnet2
                Export:
                        Name: doclane-public-subnet-2-id

        PrivateRouteTableId:
                Value: !Ref PrivateRouteTable
                Export:
                        Name: doclane-private-route-table-id

        BastionSGId:
                Value: !Ref BastionSG
                Export:
                        Name: doclane-bastion-sg-id

        ApiGatewayVpcEndpoint:
                Value: !Ref InterfaceEndpointAPIGateway
                Export:
                        Name: doclane-api-gateway-interface-endpoint-id

        ELBSecurityGroup:
                Value: !Ref ELBSecurityGroup
                Export:
                        Name: doclane-elb-security-group

        WebServerSecurityGroup:
                Value: !Ref WebServerSG
                Export:
                        Name: doclane-web-server-security-group
